# sitekicker

./: .gitignore  .travis.yml  Dockerfile  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-and-deploy.yml
examples/simple-site/: sitekicker.yml
examples/simple-site/articles/: folder.yml
examples/simple-site/articles/code/: code.md
examples/simple-site/articles/hello/: hello.md
examples/simple-site/assets/css/: main.css
examples/simple-site/pages/index/: index.md
examples/simple-site/templates/: default.j2  index.j2  post.j2  tags.j2
sitekicker/: __init__.py  __main__.py  arguments.py  dotdict.py  entry.py  entry_file.py  entry_image.py  jinja2_filters.py  options.py  site.py  site_server.py  site_tasks.py  site_watcher.py  util.py
sitekicker/entry/: entry.py  entry_dir.py  entry_file.py  entry_image.py  entry_tasks.py  entry_template.py
sitekicker/folder/: asset_folder.py  enclosure_folder.py  entry_folder.py  template_folder.py
specs/: build.md  entities.md
src/sitekicker/: site.py  site_watcher.py  util.py  watermark.py
src/sitekicker/entry/: entry.py  entry_file.py  entry_tasks.py
src/sitekicker/folder/: asset_folder.py  enclosure_folder.py
