[tool.poetry]
name = "sitekicker"
version = "1.0.6"
description = "Another static site generator"
readme ="README.md"
authors = ["Minghao Ni <niminghao804@gmail.com>"]
license = "MIT"
repository = "https://github.com/nmhnmh/sitekicker"
keywords = [
  "Static Site Generator"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development",
  "Topic :: System :: Networking",
  "Topic :: Terminals",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]
packages = [
    { include = "sitekicker", from = "src" }
]

[tool.poetry.scripts]
sk = "sitekicker.__main__:main"
sitekicker = "sitekicker.__main__:main"

[tool.poetry.dependencies]
python = "^3.5"
pyyaml = "*"
pygments = "*"
beautifulsoup4 = "*"
markdown = "*"
pymdown-extensions = "*"
jinja2 = "*"
watchdog = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
setuptools = "*"
wheel = "*"
twine = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
