[metadata]
name = sitekicker
url = https://github.com/nmhnmh/sitekicker
author = Minghao Ni
author_email = niminghao804@gmail.com
version = attr: sitekicker.version
description = Generate and build a static website
long_description = file: README.md
long_description_content_type = text/markdown
license = file: LICENSE.txt
python_requires = >=3.5
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development
    Topic :: System :: Networking
    Topic :: Terminals
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing
    Topic :: Utilities

[options]
packages = find:
install_requires =
    PyYAML
    Pygments
    beautifulsoup4
    markdown
    pymdown-extensions
    Jinja2
    watchdog

[options.package_data]
    sitekicker = entry/*, folder/*

[options.entry_points]
    console_scripts = 
        sitekicker = sitekicker.__main__:main

[bdist_wheel]
universal=0
